<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PrivLogin"
    android:background="@drawable/background">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideHorizontal20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtLoginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLoginMail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpPass1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editLoginPassword1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/constraintBtn"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInpPass1">
        <Button
            android:id="@+id/btnInicioSesion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/constraintBtn"
            app:layout_constraintEnd_toStartOf="@+id/guideVerticalBtn"
            android:text="@string/btnInicioSesion"
            tools:ignore="MissingConstraints">
        </Button>
        <Button
            android:id="@+id/btnRegistroNuevo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn"
            app:layout_constraintStart_toEndOf="@+id/guideVerticalBtn"
            app:layout_constraintEnd_toEndOf="@+id/constraintBtn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnNuevoUsuario"
            tools:ignore="MissingConstraints">
        </Button>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5">

        </androidx.constraintlayout.widget.Guideline>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

</androidx.constraintlayout.widget.ConstraintLayout>