<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PrivInicioGoogle"
    android:background="@drawable/background">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideHorizontal20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtGoogleMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLoginMail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputGooglePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtGooglePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editLoginPassword1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGoogleRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/google_signin_btn"
        android:textColor="@color/black"
        android:drawableStart="@drawable/googleg_standard_color_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnInicioSesion"
        app:layout_constraintTop_toBottomOf="@id/txtInputGooglePass">
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />


</androidx.constraintlayout.widget.ConstraintLayout>