<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivMainActivity"
    android:background="@drawable/background">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtInpMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideHorizontal15"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtLoginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLoginMail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInpMail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editLoginPassword1"
            android:inputType="textPassword"
            android:textColorHint="#0D47A1"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnInicioCorreo"
        style="@style/btnApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnInicioCorreo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtInpPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideHorizontal40"
        tools:ignore="TextContrastCheck">
    </Button>
    <Button
        android:id="@+id/btnNuevoUsuario"
        style="@style/btnApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnNuevoUsuario"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnInicioCorreo"
        android:layout_marginTop="10dp"
        tools:ignore="TextContrastCheck">
    </Button>
    <Button
        android:id="@+id/btnInicioGoogle"
        style="@style/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevoUsuario"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>
    <Button
        android:id="@+id/btnInicioApple"
        style="@style/btnAppleInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioGoogle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>
    <Button
        android:id="@+id/btnInicioFacebook"
        style="@style/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioApple"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />




</androidx.constraintlayout.widget.ConstraintLayout>